<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.edit_task.EditTaskActivity">
    <View
        android:id="@+id/view_top_blue_bg"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintHeight_percent=".1"
        android:background="@color/primary_color"
        />
    <View
        android:id="@+id/view_bottom_blue_bg"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/view_top_blue_bg"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintHeight_percent=".1"
        android:background="@color/primary_color"
        />
    <TextView
        android:id="@+id/title_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/view_top_blue_bg"
        android:text="@string/to_do_list"
        android:layout_marginHorizontal="18dp"
        android:textSize="22sp"
        android:textColor="@color/white"
        android:textStyle="bold"
        />

    <androidx.cardview.widget.CardView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="32dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:contentPadding="16dp"
        app:cardCornerRadius="16dp"
        app:layout_constraintTop_toTopOf="@id/view_bottom_blue_bg"
        >
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            >
            <TextView
                android:id="@+id/add_new_task_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:textColor="?colorOnBackground"
                android:padding="10dp"
                android:text="@string/edit_task"
                android:textSize="22sp"
                android:textStyle="bold" />
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/title_til"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                app:layout_constraintTop_toBottomOf="@+id/add_new_task_tv">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/enter_new_title"
                    android:textColor="?colorOnBackground"
                    android:padding="20dp" />
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/description_til"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                app:layout_constraintTop_toBottomOf="@+id/title_til">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/enter_new_description"
                    android:lines="2"
                    android:maxLines="5"
                    android:textColor="?colorOnBackground"
                    android:padding="20dp" />
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/select_date_til"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                app:layout_constraintEnd_toStartOf="@+id/select_time_til"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintHorizontal_chainStyle="spread"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/description_til">

                <TextView
                    android:id="@+id/select_date_tv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/select_date"
                    android:padding="10dp"
                    android:textColor="?colorOnBackground"
                    app:layout_constraintTop_toBottomOf="@id/description_til" />
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/select_time_til"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/select_date_til"
                app:layout_constraintTop_toBottomOf="@+id/description_til">

                <TextView
                    android:id="@+id/select_time_tv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/select_time"
                    android:textColor="?colorOnBackground"
                    android:padding="10dp" />
            </com.google.android.material.textfield.TextInputLayout>
      ]
            <com.google.android.material.button.MaterialButton
                android:id="@+id/save_btn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/save_changes"
                app:layout_constraintTop_toBottomOf="@id/select_date_til"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:backgroundTint="@color/primary_color"
                android:textColor="@color/white"
                android:layout_marginHorizontal="16dp"
                />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>